Create 2 new recipes and updates to existing files
Creation of chicken-parmesan.html and reuben-sandwich.html. Update to index.html with links to chicken-paresan.html and reuben-sandwich.html.
Updated title in shrimp-fried-rice from Document to Shrimp Fried Rice.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/shrimp-fried-rice.html">Shrimp Fried Rice</a>
+    <ul>
+        <li><a href="recipes/shrimp-fried-rice.html">Shrimp Fried Rice</a></li>
+        <li><a href="recipes/chicken-parmesan.html">Chicken Parmesan</a></li>
+        <li><a href="recipes/reuben-sandwich.html">Reuben Sandwich</a></li>
+    </ul>
 </body>
 </html>
