--- a/recipes/shrimp-fried-rice.html
+++ b/recipes/shrimp-fried-rice.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shrimp Fried Rice</title>
 </head>
 <body>
     <h1>Shrimp Fried Rice</h1>
-    <img src="/home/veradox/Desktop/Images/Shrimp Fried Rice.webp" alt="">
+    <img src="/home/veradox/Desktop/Images/Shrimp Fried Rice.webp" alt="Shrimp Fried Rice">
     <h2>Description</h2>
     <p>Easy homemade shrimp fried rice with peas, carrots, garlic, and green onions.</p>
     <h3>Ingredients</h3>
